--- a/first_app/index.html
+++ b/first_app/index.html
@@ -7,5 +7,5 @@
     <title>Understanding TypeScript</title>
     <script src="dist/app.js" defer></script>
   </head>
-  <body></body>
+  <body id="app"></body>
 </html>
